--- a/WellManagedDataAccess.csproj
+++ b/WellManagedDataAccess.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\XPath\EnumerableEx.cs" />
+    <Compile Include="XPath\EnumerableEx.cs" />
     <Compile Include="Client\BindParameter.cs" />
     <Compile Include="Client\BindParameterCollection.cs" />
     <Compile Include="Client\WNonQueryCommandBase.cs" />
@@ -55,10 +55,10 @@
     <Compile Include="Client\WCommandBase.cs" />
     <Compile Include="Client\WNonQueryArrayCommand.cs" />
     <Compile Include="Client\WCommandT.cs" />
-    <Compile Include="Helpers\XmlToSql.cs" />
-    <Compile Include="Helpers\XPath\ParseContextVariable.cs" />
-    <Compile Include="Helpers\XPath\ParseDataContext.cs" />
-    <Compile Include="Helpers\XPath\XPathEvaluator.cs" />
+    <Compile Include="XPath\XmlToSql.cs" />
+    <Compile Include="XPath\ParseContextVariable.cs" />
+    <Compile Include="XPath\ParseDataContext.cs" />
+    <Compile Include="XPath\XPathEvaluator.cs" />
     <Compile Include="Client\WConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client\WNonQueryCommand.cs" />
